5 hours 41 minutes : All admin functions completed
